--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .vscode/
 obj/
-bin/
+
+# Ignore all bin files except for app.exe
+HW/bin/*
+!HW/bin/Debug/
+HW/bin/Debug/*
+!HW/bin/Debug/net5.0/
+HW/bin/Debug/net5.0/*
 !HW/bin/Debug/net5.0/app.exe
