--- a/HW/app.csproj
+++ b/HW/app.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JsonSubTypes" Version="1.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="JsonSubTypes" Version="1.8.0" />
   </ItemGroup>
 
 </Project>
